2006-06-08  Maxim Kuvyrkov  <mkuvyrkov@ispras.ru>

	PR target/27863
	* haifa-sched.c (unlink_other_notes, unlink_line_notes): Update basic
	block boundaries.

2006-06-08  Richard Guenther  <rguenther@suse.de>

	PR middle-end/27116
	* fold-const.c (negate_expr_p): We can negate BIT_NOT_EXPR
	only, if overflow is defined and not trapping.
	(negate_expr): Likewise.

2006-06-07  Zdenek Dvorak <dvorakz@suse.cz>

	PR tree-optimization/27872
	* tree-ssa-loop-manip.c (tree_unroll_loop): Set EDGE_IRREDUCIBLE_LOOP
	flag on the new exit edge of the unrolled loop.

2006-06-07  Zdenek Dvorak <dvorakz@suse.cz>

	PR rtl-optimization/26449
	* loop-invariant.c (move_invariant_reg): Fail if force_operand fails.

2006-06-07  Andrew MacLeod  <amacleod@redhat.com>

	PR middle-end/27793
	* tree-dfa.c (referenced_vars_dup_list): New.  List of duplicate 
	referenced_variables with matching DECL_UID's.
	(find_referenced_vars): Make sure duplicate list is empty to start.
	(referenced_var_p): Remove.
	(referenced_var_check_and_insert): Renamed from referenced_var_insert.  
	Check if var is in the list, and add if needed.  Update the duplicate
	list if a different var is in the list with the same DECL_UID.
	(add_referenced_var): Call routine to check and insert.
	* tree-ssa.c (delete_tree_ssa): Clear var_ann's on duplicates.
	* tree-flow.h (referenced_vars_dup_list): External declaration.

2006-06-07  Fred Fish  <fnf@specifix.com>

	* config/mips/t-elf (MULTILIB_MATCHES): Combine two entries
	into single entry.

2006-06-07  Paolo Bonzini  <bonzini@gnu.org>

	PR target/27390
	* reg-stack.c (subst_stack_regs_pat): Reorder resetting of
	the imaginary and real parts of a clobbered register.
	Emit insn to set the imaginary part.

2006-06-06  Peter Lemieszewski  <lemie@us.ibm.com>

	* config/s390/t-tpf (LIB2ADDEH): Include unwind-dw2-fde-glibc.c
	in lieu of unwind-dw2-fde.c.

2006-06-06  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* config/i386/mingw32.h (GOMP_SELF_SPECS): Define.
